# canton

./: .editorconfig  .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .sbtopts  .scalafix.conf  .scalafmt.conf  .vale.ini  .yamllint  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  EXTERNAL_CALL_IMPLEMENTATION_PLAN.md  EXTERNAL_CALL_TASKS.md  LICENSE.txt  README-release.md  README.md  SECURITY.md  UNRELEASED.md  VERSION  buf.work.yaml  build.sbt  canton-json.lnav.json  canton.lnav.json  community-build.sbt  daml_dependencies.json  dependencies.json  shell.nix  version.sbt
.agent/: PLANS.md
.ci/: Dockerfile.canton-build  Dockerfile.query-stats-postgres  README.md  nix-exec  setup-docker-build-container.sh  update-build-image.sh
community/daml-lf/language/: BUILD.bazel
community/daml-lf/language/src/main/scala/com/digitalasset/daml/lf/: InternalError.scala
community/daml-lf/language/src/main/scala/com/digitalasset/daml/lf/language/: Ast.scala  Graphs.scala  LanguageFeatureGen.scala  LanguageVersion.scala  LanguageVersionGen.scala  LegacyLanguageVersions.scala  LookupError.scala  PackageInterface.scala  TypeDestructor.scala  TypeOrdering.scala  TypeSig.scala  Util.scala  UtilityDamlPackages.scala
community/daml-lf/language/src/main/scala/com/digitalasset/daml/lf/language/util/: PackageInfo.scala
community/daml-lf/language/src/main/scala/com/digitalasset/daml/lf/language/util/iterable/: ExprIterable.scala  TypeIterable.scala
community/daml-lf/language/src/test/scala/com/digitalasset/daml/lf/language/: AstSpec.scala  GraphsSpec.scala  LanguageVersionSpec.scala
(+8155 files in other folders)
