# Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "da_scala_test",
    "lf_scalacopts",
    "lf_scalacopts_stricter",
)
load(
    "//canton/community/daml-lf/language:daml-lf.bzl",
    "FEATURES",
    "RAW_ALL_LF_VERSIONS",
    "RAW_COMPILER_INPUT_LF_VERSIONS",
    "RAW_COMPILER_OUTPUT_LF_VERSIONS",
    "RAW_DEFAULT_LF_VERSION",
    "RAW_DEV_LF_VERSION",
    "RAW_LATEST_STABLE_LF_VERSION",
    "RAW_STABLE_LF_VERSIONS",
    "RAW_STAGING_LF_VERSION",
)

da_scala_library(
    name = "language",
    srcs = glob(["src/main/**/*.scala"]),
    scala_deps = [
        "@maven//:org_scalaz_scalaz_core",
    ],
    scalacopts = lf_scalacopts_stricter,
    tags = ["maven_coordinates=com.daml:daml-lf-language:__VERSION__"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_daml_daml_lf_data_2_13",
        "@maven//:com_daml_nameof_2_13",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

da_scala_test(
    name = "language-test",
    size = "small",
    srcs = glob(["src/test/**/*.scala"]),
    scala_deps = [
        "@maven//:org_scalatest_scalatest_wordspec",
    ],
    scalacopts = lf_scalacopts,
    deps = [
        ":language",
        "@maven//:com_daml_daml_lf_data_2_13",
    ],
)
